# autoware_v2x_trajectory

./: CMakeLists.txt  cyclonedds.xml  launch_autoware_v2x_pixkit.sh  launch_autoware_v2x_rsu.sh  package.xml  setup.sh
include/autoware_v2x/: cpm_application.hpp  v2x_app.hpp  v2x_node.hpp
launch/: v2x.launch.xml
src/: cpm_application.cpp  trajectory_visualizer_node.cpp  v2x_app.cpp  v2x_node.cpp
